# engram-notion-mcp

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: create-github-release.yml  prepare-release.yml  publish-dual.yml
conductor/: tech-stack.md  tracks.md
conductor/archive/automated_release_notes_20251231/: plan.md
conductor/tracks/automated_release_notes_20251231/: plan.md
conductor/tracks/feature_parity_20251230/: metadata.json  plan.md
conductor/tracks/robust_content_20251230/: plan.md
docs/: verification-robust-content-python.md
node/: README.md  package.json
node/src/: index.js  index.test.ts  index.ts
npm-wrapper/: bin.js  package.json
python/: README.md  pyproject.toml
python/src/engram_notion_mcp/: server.py  test_large_content.py  test_server.py
src/engram_mcp/: server.py
