[project]
name = "better-notion-mcp"
version = "0.1.2"
description = "A better Notion integration for AI agents"
dependencies = [
    "mcp",
    "fastmcp",
    "notion-client",
    "python-dotenv"
]
requires-python = ">=3.10"
authors = [
  { name = "Shubham Omar", email = "shubhamomar53@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
urls = { Repository = "https://github.com/shubhamomar/better-notion-mcp" }
scripts = { "better-notion-mcp" = "better_notion_mcp.server:mcp.run" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"